Colab을 통해 생성됨

--- a/drug_death_preprocessing.ipynb
+++ b/drug_death_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "wAsKMeiHFd2f",
+        "XjwfPWASV0GO",
         "GcQZcmMGBMuo",
         "Q843rjqQopmP",
         "U1ZIHjuBZNzs",
@@ -32,8 +32,25 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/1stMourinhoFan/TestReository/blob/main/drug_death_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/1stMourinhoFan/DataScienc_TermProject/blob/main/drug_death_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Drug Overdoes Deaths\n",
+        "\n",
+        "Dataset: https://www.kaggle.com/datasets/ruchi798/drug-overdose-deaths\n",
+        "\n",
+        "This data is about drug overdose deaths in Connecticut\n",
+        "\n",
+        "Our goal is to **define** and **predict multi-drug use**.\n",
+        "\n",
+        "To reach this goal, we have to understand the columns and general information of the following data."
+      ],
+      "metadata": {
+        "id": "5cGeyblvQNbm"
+      }
     },
     {
       "cell_type": "markdown",
@@ -42,19 +59,6 @@
       ],
       "metadata": {
         "id": "wAsKMeiHFd2f"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Dataset: https://www.kaggle.com/datasets/ruchi798/drug-overdose-deaths\n",
-        "\n",
-        "Our goal is to **define** and **predict multi-drug use**.\n",
-        "\n",
-        "To reach this goal, we have to understand the columns and general information of the following data."
-      ],
-      "metadata": {
-        "id": "QP6c64fYHX8x"
       }
     },
     {
